<resources>
    <string name="app_name">WeatherAppXml</string>
    <string name="search_hint">Enter city</string>
    <string name="search_button">Search</string>
    <string name="weather_image">Weather Image</string>
    <string name="settings">Settings</string>
    <string name="day_temperature">Day %1$d°</string>
    <string name="night_temperature">Night %1$d°</string>
    <string name="three_day_forecast">3-day forecast</string>
    <string name="today">Today</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="theme_auto">Auto</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="login">E-mail</string>
    <string name="password">Password</string>
    <string name="login_button">Sign in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration_button">Registration</string>
    <string name="sign_up">Sign up</string>
    <string name="user">Hello %1$s!</string>
    <string name="logout">Logout</string>
    <string name="error">You entered incorrect data</string>
    <string name="error_reg">Passwords don\'t match</string>
    <string name="error_login">E-mail is required</string>
    <string name="error_email">This is not an e-mail</string>
    <string name="error_pass">Password is required</string>
    <string name="error_pass_len">Password must be minimum 8 characters</string>
    <string name="error_conf_pass">Confirm password is required</string>
    <string name="error_serv">Bad connection</string>
</resources>